--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4166,8 +4166,6 @@ button:focus:not(:focus-visible) {
     margin-top: 35px;
     padding: 0;
     padding-top: 30px;
-    margin-right: 8px;
-    margin-left: 8px;
   }
 }
 .btm-slider .left-btm-data {
@@ -4767,6 +4765,7 @@ button:focus:not(:focus-visible) {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+  margin-bottom: 14px;
   color: #787878;
   position: relative;
 }
@@ -4783,6 +4782,7 @@ button:focus:not(:focus-visible) {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+  margin-bottom: 14px;
   color: #3F92BE;
   position: relative;
 }
@@ -4793,6 +4793,20 @@ button:focus:not(:focus-visible) {
 @media (max-width: 575px) {
   .similar-event .similar-event-data .similar-event-list ul li .h4-width {
     max-width: 237px;
+  }
+}
+.similar-event .similar-event-data .similar-event-list ul li.custm-h4-width h3 {
+  margin-bottom: 24px;
+}
+.similar-event .similar-event-data .similar-event-list ul li.custm-h4-width h4 {
+  margin-bottom: 24px;
+}
+@media (max-width: 575px) {
+  .similar-event .similar-event-data .similar-event-list ul li.custm-h4-width h3 {
+    margin-bottom: 26px;
+  }
+  .similar-event .similar-event-data .similar-event-list ul li.custm-h4-width h4 {
+    margin-bottom: 26px;
   }
 }
 
@@ -4815,6 +4829,7 @@ button:focus:not(:focus-visible) {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+  margin-bottom: 14px;
   color: #787878;
   position: relative;
   font-weight: 700;
@@ -4824,6 +4839,7 @@ button:focus:not(:focus-visible) {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+  margin-bottom: 14px;
   color: #3F92BE;
 }
 .key-word .key-word-list .h4-width {
