--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,6 +133,7 @@ img {
   font-size: 16px;
   font-weight: 400;
 line-height: 22px;
+margin-bottom: 14px;
 }
 @mixin table-width {
   width: 187px;
@@ -3826,8 +3827,8 @@ p{
         margin-top: 35px;
         padding:0;
         padding-top: 30px;
-        margin-right: 8px;
-        margin-left: 8px;
+        // margin-right: 8px;
+        // margin-left: 8px;
       }
   .left-btm-data{
     position: relative;
@@ -4343,6 +4344,7 @@ padding-right: 43px;
         li{
           display: flex;
           gap: 26px;
+          
           h3{
           @include h3-list();
           &::after{
@@ -4367,6 +4369,22 @@ padding-right: 43px;
               max-width: 237px;
               }
           }
+      &.custm-h4-width{
+        h3{
+          margin-bottom: 24px;
+        }
+        h4{
+          margin-bottom: 24px;
+        }
+        @media (max-width: #{$sm}) {
+          h3{
+            margin-bottom: 26px ;
+          }
+          h4{
+            margin-bottom: 26px;
+          }
+          }
+      }
         }
       }
     }
