--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -338,13 +338,22 @@ header {
           margin: 5px 6px;
           padding: 19px 55px;
           @media (max-width: 1199px) {
-            padding: 12px 34px;
+            padding: 10px 32px;
           }
           @media (max-width: 1024px) {
             padding: 15px 50px;
           }
           @media (max-width: 991px) {
             padding: 7px 24px;
+          }
+          @media (max-width: 767px) {
+            padding: 7px 26px;
+          }
+          @media (max-width: 670px) {
+            padding: 6px 22px;
+          }
+          @media (max-width: 620px) {
+            padding: 4px 16px;
           }
           // &:hover {
           //   cursor: pointer;
@@ -368,9 +377,17 @@ header {
               font-size: 18px;
               line-height: 26px;
             }
+            @media (max-width: 767px) {
+            font-size: 16px;
+            line-height: 22px;
+            }
             @media (max-width: 699px) {
               font-size: 14px;
               line-height: 22px;
+            }
+            @media (max-width: 600px) {
+              font-size: 12px;
+              line-height: 18px;
             }
           }
           // .text-orange {
