--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5059,6 +5059,9 @@ button:focus:not(:focus-visible) {
     margin-bottom: 6px;
   }
 }
+.online-register .city-h3 {
+  margin-bottom: 24px;
+}
 .online-register:last-child, .online-register h3 {
   font-size: 16px;
   line-height: 21px;
