--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4625,6 +4625,9 @@ margin-bottom: 6px;
 }
  }
   }
+  .city-h3{
+    margin-bottom: 24px;
+  }
   &:last-child , h3{
     font-size: 16px;
     line-height: 21px;
