--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3825,7 +3825,7 @@ button:focus:not(:focus-visible) {
 @media (max-width: 575px) {
   .register-list-form .form-list .form-list-data .btn {
     font-size: 16px;
-    line-height: 22px;
+    line-height: 16px;
   }
 }
 .register-list-form .form-list .form-list-data .btn1 {
@@ -3876,6 +3876,7 @@ button:focus:not(:focus-visible) {
 @media (max-width: 768px) {
   .register-list-form .form-list .form-list-data .form-list-content {
     padding: 26px 24px 26px 24px;
+    margin-top: 29px;
   }
 }
 @media (max-width: 575px) {
@@ -4419,7 +4420,7 @@ button:focus:not(:focus-visible) {
 }
 
 .mobile-show-btn {
-  margin-top: 9px;
+  margin-top: 14px;
 }
 
 .owl-theme .owl-dots .owl-dot span {
@@ -4430,6 +4431,15 @@ button:focus:not(:focus-visible) {
   display: none;
 }
 
+.click-btn-data {
+  visibility: hidden;
+}
+
+@media (max-width: 575px) {
+  .click-btn-data-data {
+    display: none;
+  }
+}
 .custm-col12 {
   position: absolute;
   z-index: 99999;
