--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5475,7 +5475,7 @@ gap: 28px;
         width: 100%;
       }
       textarea{
-        height: 108px;
+        // height: 108px;
         border: 1px solid #787878;
         border-radius: 10px;
         padding: 8px 22px;
@@ -6309,3 +6309,11 @@ margin-bottom: 24px;
     }
   }
 }
+
+@media (min-width: 576px) {
+  .container,
+  .container-sm {
+    max-width: 720px !important;
+  }
+  }
+
