--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4036,12 +4036,13 @@ button:focus:not(:focus-visible) {
 @media (max-width: 1024px) {
   .list-slider .list-slider-left .left-img {
     width: 75%;
+    margin-top: 0;
+    margin-bottom: 60px;
   }
 }
 @media (max-width: 768px) {
   .list-slider .list-slider-left .left-img {
     margin-top: 0;
-    margin-bottom: 20px;
     width: 75%;
   }
 }
@@ -4137,6 +4138,11 @@ button:focus:not(:focus-visible) {
 @media (max-width: 1024px) {
   .list-slider .list-slider-left .btn {
     right: 0;
+  }
+}
+@media (max-width: 991px) {
+  .list-slider .list-slider-left .btn {
+    bottom: 20px;
   }
 }
 @media (max-width: 768px) {
@@ -4502,7 +4508,7 @@ button:focus:not(:focus-visible) {
     margin: 0 53px 0 81px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .all-event-form .form-list {
     margin: 0;
   }
@@ -4523,12 +4529,17 @@ button:focus:not(:focus-visible) {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+@media (max-width: 992px) {
+  .all-event .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media (max-width: 768px) {
   .all-event .grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .all-event .grid {
     grid-template-columns: repeat(1, 1fr);
   }
