--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1501,9 +1501,10 @@ footer .footer-data .footer-right li:last-child::after {
   align-items: center;
   margin-bottom: 33px;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .right-sidebar.quotation-main .rightside-title {
     align-items: start;
+    flex-direction: column;
   }
 }
 .right-sidebar.quotation-main .rightside-title.partner-title {
@@ -1779,7 +1780,7 @@ footer .footer-data .footer-right li:last-child::after {
     width: 260px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-head div.exception-tab {
     width: 100%;
   }
@@ -1815,7 +1816,7 @@ footer .footer-data .footer-right li:last-child::after {
     padding: 10px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-body .que-tr {
     flex-direction: column;
     align-items: start;
@@ -1850,7 +1851,7 @@ footer .footer-data .footer-right li:last-child::after {
     line-height: 18px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-body .que-tr h4, .quontation-table .que-body .que-tr div {
     width: 300px;
     line-height: 25px;
@@ -1946,12 +1947,12 @@ footer .footer-data .footer-right li:last-child::after {
     width: 260px;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-body .que-tr .que-gray-flex.exception-tab {
     width: 100%;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-body .que-tr .que-gray-flex {
     display: flex;
     width: 100%;
@@ -1972,7 +1973,7 @@ footer .footer-data .footer-right li:last-child::after {
   letter-spacing: 4px;
   line-height: 22px;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .quontation-table .que-body .que-tr .que-gray-flex h3 {
     display: block;
     width: 170px;
