--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -568,7 +568,7 @@ header {
         border-bottom: 0;
         text-align: center;
       }
-      @media (max-width: 767px) {
+      @media (max-width: 768px) {
       //  width: 87px;
        &:nth-child(even){
         background-color: #287AA5;
@@ -788,7 +788,7 @@ header {
     @media (max-width: #{$med}) {
       // @include pading();
     }
-    @media (max-width: #{$sm}) {
+    @media (max-width: 767px) {
       gap: 11px;
       flex-direction: column;
       justify-content: center;
@@ -849,7 +849,7 @@ header {
         margin-bottom: 20px;
         // @include pading();
       }
-      @media (max-width: #{$sm}) {
+      @media (max-width: 767px) {
         flex-direction: column;
         align-items: start;
       }
@@ -859,7 +859,7 @@ header {
         color: #3a3a3a;
         line-height: 24px;
         margin-bottom: 0;
-        @media (max-width: #{$sm}) {
+        @media (max-width: 767px) {
           margin-bottom: 10px;
         }
       }
@@ -872,7 +872,7 @@ header {
         font-weight: 700;
         border: 1px solid #31b762;
         border-radius: 20px;
-        @media (max-width: #{$sm}) {
+        @media (max-width: 767px) {
           padding: 13px 22px;
           margin-bottom: 28px;
         }
@@ -887,7 +887,7 @@ header {
     @media (max-width: #{$med}) {
       // @include pading();
     }
-    @media (max-width: #{$sm}) {
+    @media (max-width: 767px) {
       flex-direction: column;
       align-items: start;
     }
@@ -900,7 +900,7 @@ header {
       color: #3a3a3a;
       margin-bottom: 0;
 
-      @media (max-width: #{$sm}) {
+      @media (max-width: 767px) {
         margin-bottom: 20px;
       }
     }
@@ -919,7 +919,7 @@ header {
           outline: none;
           box-shadow: none;
         }
-        @media (max-width: #{$sm}) {
+        @media (max-width: 767px) {
           width: 317px;
           height: 50px;
         }
@@ -2100,7 +2100,7 @@ footer {
     @media (max-width: 991px) {
       gap: 27px;
     }
-    @media (max-width: #{$sm}) {
+    @media (max-width: 767px) {
       flex-direction: column;
       padding-left: 10px;
       padding-right: 10px;
@@ -2127,7 +2127,7 @@ footer {
         @media (max-width: #{$xl}) {
           gap: 20px;
         }
-        @media (max-width: #{$sm}) {
+        @media (max-width:767px) {
           flex-direction: column;
           gap: 0;
           align-items: start;
@@ -2150,7 +2150,7 @@ footer {
         display: inline-block;
         width: 24px;
         height: 24px;
-        @media (max-width: #{$sm}) {
+        @media (max-width: 767px) {
           width: 50px;
           height: 50px;
         }
@@ -2176,7 +2176,7 @@ footer {
           height: 24px;
           width: 24px;
           background-color: #fff;
-          @media (max-width: #{$sm}) {
+          @media (max-width: 767px) {
             width: 50px;
             height: 50px;
           }
@@ -2193,7 +2193,7 @@ footer {
             border-width: 0 4px 4px 0;
             transform: rotate(45deg);
 
-            @media (max-width: #{$sm}) {
+            @media (max-width: 767px) {
               left: 19px;
               top: 8px;
               width: 12px;
@@ -2213,7 +2213,7 @@ footer {
       width: 80px;
       height: 57px;
       object-fit: cover;
-      @media (max-width: #{$sm}) {
+      @media (max-width: 767px) {
         width: 230px;
         height: 145px;
       }
@@ -2229,7 +2229,7 @@ footer {
 }
 .head-w {
   width: 180px;
-  @media (max-width: #{$sm}) {
+  @media (max-width:767px) {
     width: 100%;
   }
 }
@@ -2245,24 +2245,24 @@ footer {
   @media (max-width: #{$med}) {
     width: 250px;
   }
-  @media (max-width: 690px) {
-    width: 163px;
-  }
-  @media (max-width: #{$sm}) {
+  // @media (max-width: 690px) {
+  //   width: 163px;
+  // }
+  @media (max-width: 767px) {
     width: auto;
   }
 }
 .custm-w-2 {
   width: 114px;
   word-break: break-all;
-  @media (max-width: #{$sm}) {
+  @media (max-width:767px) {
     width: auto;
   }
 }
 .custm-w-3 {
   width: 100px;
   word-break: break-all;
-  @media (max-width: #{$sm}) {
+  @media (max-width: 767px) {
     width: auto;
   }
 }
@@ -2274,7 +2274,7 @@ footer {
   @media (max-width: #{$xl}) {
     gap: 20px;
   }
-  @media (max-width: #{$sm}) {
+  @media (max-width:767px) {
     gap: 0;
   }
 }
@@ -2365,7 +2365,7 @@ footer {
   }
 }
 .record-qr{
-  @media (max-width: #{$sm}) {
+  @media (max-width: 767px) {
   padding: 0 20px;
   }
   .detail-title {
